; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wlcore/extr_boot.c_wlcore_boot_upload_firmware.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wlcore/extr_boot.c_wlcore_boot_upload_firmware.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1271 = type { i32* }

@DEBUG_BOOT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"firmware chunks to be uploaded: %u\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"firmware chunk too long: %u\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [26 x i8] c"chunk %d addr 0x%x len %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wlcore_boot_upload_firmware(%struct.wl1271* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.wl1271*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.wl1271* %0, %struct.wl1271** %3, align 8
  store i32 0, i32* %7, align 4
  %9 = load %struct.wl1271*, %struct.wl1271** %3, align 8
  %10 = getelementptr inbounds %struct.wl1271, %struct.wl1271* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @be32_to_cpup(i32* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 4
  store i32* %15, i32** %8, align 8
  %16 = load i32, i32* @DEBUG_BOOT, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 (i32, i8*, i32, ...) @wl1271_debug(i32 %16, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %53, %1
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 %20, -1
  store i32 %21, i32* %4, align 4
  %22 = icmp ne i32 %20, 0
  br i1 %22, label %23, label %58

23:                                               ; preds = %19
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @be32_to_cpup(i32* %24)
  store i32 %25, i32* %5, align 4
  %26 = load i32*, i32** %8, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 4
  store i32* %27, i32** %8, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @be32_to_cpup(i32* %28)
  store i32 %29, i32* %6, align 4
  %30 = load i32*, i32** %8, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 4
  store i32* %31, i32** %8, align 8
  %32 = load i32, i32* %6, align 4
  %33 = icmp sgt i32 %32, 300000
  br i1 %33, label %34, label %39

34:                                               ; preds = %23
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @wl1271_info(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %35)
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %2, align 4
  br label %60

39:                                               ; preds = %23
  %40 = load i32, i32* @DEBUG_BOOT, align 4
  %41 = load i32, i32* %4, align 4
  %42 = load i32, i32* %5, align 4
  %43 = load i32, i32* %6, align 4
  %44 = call i32 (i32, i8*, i32, ...) @wl1271_debug(i32 %40, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i32 %41, i32 %42, i32 %43)
  %45 = load %struct.wl1271*, %struct.wl1271** %3, align 8
  %46 = load i32*, i32** %8, align 8
  %47 = load i32, i32* %6, align 4
  %48 = load i32, i32* %5, align 4
  %49 = call i32 @wl1271_boot_upload_firmware_chunk(%struct.wl1271* %45, i32* %46, i32 %47, i32 %48)
  store i32 %49, i32* %7, align 4
  %50 = load i32, i32* %7, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %53

52:                                               ; preds = %39
  br label %58

53:                                               ; preds = %39
  %54 = load i32, i32* %6, align 4
  %55 = load i32*, i32** %8, align 8
  %56 = sext i32 %54 to i64
  %57 = getelementptr inbounds i32, i32* %55, i64 %56
  store i32* %57, i32** %8, align 8
  br label %19

58:                                               ; preds = %52, %19
  %59 = load i32, i32* %7, align 4
  store i32 %59, i32* %2, align 4
  br label %60

60:                                               ; preds = %58, %34
  %61 = load i32, i32* %2, align 4
  ret i32 %61
}

declare dso_local i32 @be32_to_cpup(i32*) #1

declare dso_local i32 @wl1271_debug(i32, i8*, i32, ...) #1

declare dso_local i32 @wl1271_info(i8*, i32) #1

declare dso_local i32 @wl1271_boot_upload_firmware_chunk(%struct.wl1271*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
